--- a/homesecurityService.csproj
+++ b/homesecurityService.csproj
@@ -166,6 +166,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Design" />
     <Reference Include="System.IdentityModel.Tokens.Jwt, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.3.0.2\lib\net45\System.IdentityModel.Tokens.Jwt.dll</HintPath>
@@ -242,12 +244,12 @@
     <Compile Include="Models\homesecurityContext.cs" />
     <Compile Include="Models\Notifications.cs" />
     <Compile Include="RegistrationRequest.cs" />
+    <Compile Include="ResponseMessage.cs" />
     <Compile Include="ScheduledJobs\SampleJob.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserIDUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
@@ -270,6 +272,8 @@
     <None Include="Properties\PublishProfiles\homesecurity - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\homesecurity - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\homesecurity - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\mbl-homesecurity - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\mbl-homesecurity - Web Deploy.pubxml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
